# runtime-override

./: .gitignore  CHANGELOG  Cargo.toml  README.md
.github/: release-tracker.py
.github/workflows/: release-tracker.yml  release.yml
overridden-runtimes/crab/digests/: crab-v0.12.1-tracing-runtime.json  crab-v0.12.2-1-tracing-runtime.json  crab-v0.12.2-2-tracing-runtime.json  crab-v0.12.2-3-tracing-runtime.json  crab-v0.12.2-4-tracing-runtime.json  crab-v0.12.2-tracing-runtime.json  crab-v0.12.3-2-tracing-runtime.json  crab-v0.12.4-1-tracing-runtime.json  crab-v0.12.4-tracing-runtime.json
overridden-runtimes/crab/wasms/: crab-v0.12.1-tracing-runtime.compact.compressed.wasm  crab-v0.12.2-1-tracing-runtime.compact.compressed.wasm  crab-v0.12.2-2-tracing-runtime.compact.compressed.wasm  crab-v0.12.2-3-tracing-runtime.compact.compressed.wasm  crab-v0.12.2-4-tracing-runtime.compact.compressed.wasm  crab-v0.12.2-tracing-runtime.compact.compressed.wasm  crab-v0.12.3-2-tracing-runtime.compact.compressed.wasm  crab-v0.12.4-1-tracing-runtime.compact.compressed.wasm  crab-v0.12.4-tracing-runtime.compact.compressed.wasm
overridden-runtimes/darwinia/digests/: darwinia-v0.12.3-1-tracing-runtime.json  darwinia-v0.12.3-2-tracing-runtime.json  darwinia-v0.12.3-tracing-runtime.json  darwinia-v0.12.4-1-tracing-runtime.json  darwinia-v0.12.4-tracing-runtime.json
overridden-runtimes/darwinia/wasms/: darwinia-v0.12.3-1-tracing-runtime.compact.compressed.wasm  darwinia-v0.12.3-2-tracing-runtime.compact.compressed.wasm  darwinia-v0.12.3-tracing-runtime.compact.compressed.wasm  darwinia-v0.12.4-1-tracing-runtime.compact.compressed.wasm  darwinia-v0.12.4-tracing-runtime.compact.compressed.wasm
overridden-runtimes/pangolin/digests/: pangolin-v2.8.0-tracing-runtime.json  pangolin-v2.8.1-tracing-runtime.json  pangolin-v2.8.10-tracing-runtime.json  pangolin-v2.8.11-tracing-runtime.json  pangolin-v2.8.12-tracing-runtime.json  pangolin-v2.8.13-tracing-runtime.json  pangolin-v2.8.14-tracing-runtime.json  pangolin-v2.8.15-tracing-runtime.json  pangolin-v2.8.16-tracing-runtime.json  pangolin-v2.8.17-tracing-runtime.json  pangolin-v2.8.18-tracing-runtime.json  pangolin-v2.8.19-tracing-runtime.json  pangolin-v2.8.2-tracing-runtime.json  pangolin-v2.8.6-tracing-runtime.json  pangolin-v2.8.7-tracing-runtime.json  pangolin-v2.8.8-tracing-runtime.json  pangolin-v2.8.9-tracing-runtime.json  pangolin-v2.9.0-tracing-runtime.json  pangolin-v2.9.1-tracing-runtime.json  pangolin-v2.9.2-tracing-runtime.json  pangolin-v2.9.3-tracing-runtime.json  pangolin-v2.9.4-1-reset-sync-from-tracing-runtime.json  pangolin-v2.9.4-tracing-runtime.json
overridden-runtimes/pangolin/wasms/: pangolin-v2.8.10-tracing-runtime.compact.compressed.wasm  pangolin-v2.8.11-tracing-runtime.compact.compressed.wasm  pangolin-v2.8.12-tracing-runtime.compact.compressed.wasm  pangolin-v2.8.13-tracing-runtime.compact.compressed.wasm  pangolin-v2.8.14-tracing-runtime.compact.compressed.wasm  pangolin-v2.8.15-tracing-runtime.compact.compressed.wasm  pangolin-v2.8.16-tracing-runtime.compact.compressed.wasm  pangolin-v2.8.17-tracing-runtime.compact.compressed.wasm  pangolin-v2.8.18-tracing-runtime.compact.compressed.wasm  pangolin-v2.8.19-tracing-runtime.compact.compressed.wasm  pangolin-v2.8.6-tracing-runtime.compact.compressed.wasm  pangolin-v2.8.7-tracing-runtime.compact.compressed.wasm  pangolin-v2.8.8-tracing-runtime.compact.compressed.wasm  pangolin-v2.8.9-tracing-runtime.compact.compressed.wasm  pangolin-v2.9.0-tracing-runtime.compact.compressed.wasm  pangolin-v2.9.1-tracing-runtime.compact.compressed.wasm  pangolin-v2.9.2-tracing-runtime.compact.compressed.wasm  pangolin-v2.9.3-tracing-runtime.compact.compressed.wasm  pangolin-v2.9.4-1-tracing-runtime.compact.compressed.wasm  pangolin-v2.9.4-tracing-runtime.compact.compressed.wasm
overridden-runtimes/pangoro/digests/: pangoro-v2.8.1-tracing-runtime.json  pangoro-v2.8.10-tracing-runtime.json  pangoro-v2.8.11-tracing-runtime.json  pangoro-v2.8.12-tracing-runtime.json  pangoro-v2.8.13-tracing-runtime.json  pangoro-v2.8.14-tracing-runtime.json  pangoro-v2.8.15-tracing-runtime.json  pangoro-v2.8.16-tracing-runtime.json  pangoro-v2.8.17-tracing-runtime.json  pangoro-v2.8.18-tracing-runtime.json  pangoro-v2.8.19-tracing-runtime.json  pangoro-v2.8.2-tracing-runtime.json  pangoro-v2.8.6-tracing-runtime.json  pangoro-v2.8.7-tracing-runtime.json  pangoro-v2.8.8-tracing-runtime.json  (+7 more)
runtimes/pangolin/27000/: Cargo.toml
runtimes/pangolin/27000/runtime/: Cargo.toml  build.rs  rust-toolchain
runtimes/pangolin/27000/runtime/src/: lib.rs
runtimes/pangolin/27000/runtime/src/bridges/substrate/: pangoro_messages.rs
runtimes/pangolin/27000/runtime/src/pallets/: authorship.rs  babe.rs  balances.rs  bounties.rs  bridge_bsc.rs  bridge_dispatch.rs  bridge_ethereum.rs  bridge_grandpa.rs  bridge_messages.rs  claims.rs  collective.rs  democracy.rs  dvm.rs  election_provider_multi_phase.rs  elections_phragmen.rs  evm_.rs  fee_market.rs  from_ethereum_issuing_.rs  from_substrate_issuing_.rs  grandpa.rs  header_mmr.rs  identity.rs  im_online.rs  membership.rs  multisig.rs  offences.rs  proxy.rs  recovery.rs  relay_authorities.rs  relayer_game.rs  scheduler.rs  session.rs  session_historical.rs  society.rs  staking.rs  sudo.rs  system.rs  timestamp.rs  tips.rs  to_ethereum_backing_.rs  (+6 more)
runtimes/pangolin/27000/tracing/apis/: Cargo.toml
runtimes/pangolin/27000/tracing/apis/src/: lib.rs
runtimes/pangolin/27000/tracing/events/: Cargo.toml
runtimes/pangolin/27000/tracing/events/src/: evm.rs  gasometer.rs  lib.rs  runtime.rs
runtimes/pangolin/27000/tracing/ext/: Cargo.toml
runtimes/pangolin/27000/tracing/ext/src/: lib.rs
runtimes/pangolin/27000/tracing/tracer/: Cargo.toml
runtimes/pangolin/27000/tracing/tracer/src/: lib.rs
scripts/: Cargo.toml.template  create-tracing-runtime.sh  import_runtime.sh
src/: main.rs
wasm/: pangolin-27000-runtime-override.wasm
wasm-digest/pangolin/: pangolin-runtime-100-substitute-tracing.json
wasm/pangolin/: pangolin-runtime-100-substitute-tracing.wasm
(+22 files in other folders)
