[package]
edition = "2021"
name    = "runtime-override"
version = "0.4.1"

[dependencies]
# crates.io
anyhow     = { version = "1.0" }
clap       = { version = "4.2", features = ["derive"] }
serde_json = { version = "1.0" }
# github.com
subwasmlib  = { version = "0.19.1", git = "https://github.com/AurevoirXavier/subwasm" }
wasm-loader = { version = "0.19.1", git = "https://github.com/AurevoirXavier/subwasm" }
